--- a/tweedehands.html
+++ b/tweedehands.html
@@ -1,11 +1,39 @@
 <!DOCTYPE html>
 <html lang="nl">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>tweedehands</title>
+    <link rel="stylesheet" href="tweedehands.css">
 </head>
+
 <body>
-    
+    <div class="top-balk">
+
+        <div class="woorden">
+            Home &nbsp; Over Ons &nbsp; Diensten &nbsp; Contact
+        </div>
+    </div>
+
+    <div class="zoek-container">
+        <div class="zoek-form">
+            <input type="text" class="grote-zoekbalk" placeholder="Waar ben je naar op zoek?">
+            <input type="text" class="postcode-input" placeholder="Postcode">
+            <button class="zoek-button">Zoek</button>
+        </div>
+    </div>
+
+
+    <div class="producten-container">
+    <div class="product-card">
+        <img src="Design sans titre.jpg" alt="Product 1">
+        <div class="product-info">
+            <h3>Mercedes Bravia 699 Swan</h3>
+            <p>Automaat</p>
+            <p class="prijs">€ 73.495,00</p>
+        </div>
+    </div>
+
 </body>
 </html>
