--- a/tweedehands.html
+++ b/tweedehands.html
@@ -26,14 +26,89 @@
 
 
     <div class="producten-container">
-    <div class="product-card">
-        <img src="Design sans titre.jpg" alt="Product 1">
-        <div class="product-info">
-            <h3>Mercedes Bravia 699 Swan</h3>
-            <p>Automaat</p>
-            <p class="prijs">€ 73.495,00</p>
-        </div>
+        <a href="#" class="product-link">
+
+            <div class="product-card">
+                <img src="Design sans titre.jpg" alt="Product auto">
+                <div class="product-info">
+                    <h3>Mercedes Bravia 699 Swan</h3>
+                    <p>Automaat</p>
+                    <p class="prijs">€ 73.495,00</p>
+                </div>
+            </div>
+        </a>
+
+
+
+        <a href="#" class="product-link">
+            <div class="product-card">
+                <img src="1.jpg" alt="Product 1">
+                <div class="product-info">
+                    <h3>Mercedes Bravia 699 Swan</h3>
+                    <p>Automaat</p>
+                    <p class="prijs">€ 73.495,00</p>
+                </div>
+            </div>
+        </a>
+
+        <a href="#" class="product-link">
+            <div class="product-card">
+                <img src="2.jpg" alt="Product 2">
+                <div class="product-info">
+                    <h3>Mercedes Bravia 699 Swan</h3>
+                    <p>Automaat</p>
+                    <p class="prijs">€ 73.495,00</p>
+                </div>
+            </div>
+        </a>
+
+        <a href="#" class="product-link">
+            <div class="product-card">
+                <img src="3.jpg" alt="Product 2">
+                <div class="product-info">
+                    <h3>Mercedes Bravia 699 Swan</h3>
+                    <p>Automaat</p>
+                    <p class="prijs">€ 73.495,00</p>
+                </div>
+            </div>
+        </a>
+
+        <a href="#" class="product-link">
+            <div class="product-card">
+                <img src="4.jpg" alt="Product 2">
+                <div class="product-info">
+                    <h3>Mercedes Bravia 699 Swan</h3>
+                    <p>Automaat</p>
+                    <p class="prijs">€ 73.495,00</p>
+                </div>
+            </div>
+        </a>
+
+        <a href="#" class="product-link">
+            <div class="product-card">
+                <img src="5.jpg" alt="Product 2">
+                <div class="product-info">
+                    <h3>Mercedes Bravia 699 Swan</h3>
+                    <p>Automaat</p>
+                    <p class="prijs">€ 73.495,00</p>
+                </div>
+            </div>
+        </a>
+    </div>
+
+
+
+    <!--apps -->
+    <div class="app-downloads">
+        <a href="" class="app-button">
+            <img src="playStor.jpg" alt="Download in de App Store">
+        </a>
+
+        <a href="" class="app-button">
+            <img src="apple.jpg" alt="Download in de App Store">
+        </a>
     </div>
 
 </body>
+
 </html>
