--- a/tweedehands.html
+++ b/tweedehands.html
@@ -24,10 +24,25 @@
         </div>
     </div>
 
+     <div class="categorieen-container">
+        <div class="categorieen">
+            <h2>Populaire Categorieën</h2>
+            <div class="categorie-links">
+                <a href="#" class="categorie-link">Auto's</a>
+                <a href="#" class="categorie-link">Electronica</a>
+                <a href="#" class="categorie-link">Huis &amp; Tuin</a>
+                <a href="#" class="categorie-link">Mode</a>
+                <a href="#" class="categorie-link">Sport</a>
+                <a href="#" class="categorie-link">Diensten</a>
+                <a href="#" class="categorie-link">Vrije tijd</a>
+                <a href="#" class="categorie-link">Vacatures</a>
+            </div>
+        </div>
+    </div>
+
 
     <div class="producten-container">
         <a href="#" class="product-link">
-
             <div class="product-card">
                 <img src="Design sans titre.jpg" alt="Product auto">
                 <div class="product-info">
