--- a/product-detail.html
+++ b/product-detail.html
@@ -10,24 +10,30 @@
 </head>
 
 <body>
-    <div class="top-balk">
-        <div class="woorden">
-            <a href="index.html" style="color:white; text-decoration:none;">Home</a> &nbsp; Over Ons &nbsp; Diensten
-            &nbsp; Contact
-        </div>
-    </div>
+
+    <header>
+
+        <nav class="top-balk">
+            <img src="images/logo.jpg" alt="Logo" id="logo">
+            <ul class="woorden">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="index.html">Over Ons</a></li>
+                <li><a href="index.html">Diensten</a></li>
+                <li><a href="index.html">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
 
     <div class="container">
-        <a href="tweedehands.html" class="terugknop">← Terug naar overzicht</a>
-
+        <a href="index.html" class="terugknop">← Terug naar overzicht</a>
         <section class="product-kop">
             <div class="foto-gebied">
-                <img src="Design sans titre.jpg" alt="Mercedes Bravia 699 Swan" class="hoofd-foto">
+                <img src="images/autoMerco.jpg" alt="Mercedes Bravia 699 Swan" class="hoofd-foto">
                 <div class="thumbnail-rij">
-                    <img src="1.3.jpg" alt="Thumbnail 1" class="thumbnail">
-                    <img src="1.2.jpg" alt="Thumbnail 2" class="thumbnail">
-                    <img src="1.4.jpg" alt="Thumbnail 3" class="thumbnail">
-                    <img src="1.5.jpg" alt="Thumbnail 4" class="thumbnail">
+                    <img src="images/1.3.jpg" alt="afbeelding 1" class="afbeelding">
+                    <img src="images/1.2.jpg" alt="afbeelding 2" class="afbeelding">
+                    <img src="images/1.4.jpg" alt="afbeelding 3" class="afbeelding">
+                    <img src="images/1.5.jpg" alt="afbeelding 4" class="afbeelding">
                 </div>
             </div>
 
@@ -45,6 +51,8 @@
                 </button>
             </div>
         </section>
+        <br>
+        <br>
 
         <section class="beschrijving">
             <h3>Beschrijving</h3>
@@ -83,7 +91,57 @@
                 </div>
             </div>
         </section>
+        <section>
+            <section class="commentaar-sectie">
+                <h3>gerelateerde producten</h3>
+                <div class="commentaar-rij">
+                    <div class="commentaar-vak 2">
+                        <img src="images/camion1.jpg" alt="afbeelding 4" class="afbeelding">
+                        <h3>Mercedes Citan diesel bj.</h3>
+                        <h4>€ 24.500</h4>
+                    </div>
+
+                    <div class="commentaar-vak 2">
+                        <img src="images/camion6.jpg" alt="afbeelding 4" class="afbeelding">
+                        <h3>Chausson V690 Sport Line Automaat </h3>
+                        <h4>€ 63.995,00</h4>
+                    </div>
+
+                    <div class="commentaar-vak 2">
+                        <img src="images/camion7.jpg" alt="afbeelding 4" class="afbeelding">
+                        <h3>Burstner I700 Viseo</h3>
+                        <h4>€ 49.995,00</h4>
+                    </div>
+
+
+            </section>
     </div>
+    <footer>
+        <div class="footer-container">
+            <div class="footer-column">
+                <h3>Contact</h3>
+                <p>2dehands Winkel</p>
+                <p>Brocantstraat 123</p>
+                <p>Brussel, België</p>
+                <p>Email: info@2dehandswinkel.be</p>
+                <p>Telefoon: +32 123 456 789</p>
+            </div>
+
+            <div class="footer-column">
+                <h3>Snelle links</h3>
+                <p><a href="#">Home</a></p>
+                <p><a href="#">Producten</a></p>
+                <p><a href="#">Over ons</a></p>
+                <p><a href="#">Contact</a></p>
+                <p><a href="#">FAQ</a></p>
+            </div>
+        </div>
+
+        <div class="footer-bottom">
+            <p>&copy; 2025 Tweedehands. Alle rechten voorbehouden.</p>
+            <p><a href="#">Privacy</a> | <a href="#">Voorwaarden</a> | <a href="#">Contact</a></p>
+        </div>
+    </footer>
 </body>
 
 </html>
