--- a/product-detail2.html
+++ b/product-detail2.html
@@ -11,32 +11,36 @@
 
 
 <body>
-    <div class="top-balk">
-        <div class="woorden">
-            <a href="tweedehands.html" style="color:white; text-decoration:none;">Home</a> &nbsp; Over Ons &nbsp; Diensten
-            &nbsp; Contact
-        </div>
-    </div>
+    <header>
+        <nav class="top-balk">
+            <img src="images/logo.jpg" alt="Logo" id="logo">
+            <ul class="woorden">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="index.html">Over Ons</a></li>
+                <li><a href="index.html">Diensten</a></li>
+                <li><a href="index.html">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
 
     <div class="container">
-        <a href="tweedehands.html" class="terugknop">← Terug naar overzicht</a>
+        <a href="index.html" class="terugknop">← Terug naar overzicht</a>
 
         <section class="product-kop">
             <div class="foto-gebied">
-                <img src="Design sans titre (7).jpg" alt="MTB 29 Canyon Spectral AL 7.9" class="hoofd-foto">
+                <img src="images/fiets0.jpg" alt="MTB 29 Canyon Spectral AL 7.9" class="hoofd-foto">
                 <div class="thumbnail-rij">
-                    <img src="2.1.jpg" alt="Thumbnail 1" class="thumbnail">
-                    <img src="2.2.jpg" alt="Thumbnail 2" class="thumbnail">
-                    <img src="2.3.jpg" alt="Thumbnail 3" class="thumbnail">
+                    <img src="images/fiets3.jpg" alt="afbeelding 3" class="afbeelding">
+                    <img src="images/fiets2.jpg" alt="afbeelding 3" class="afbeelding">
+                    <img src="images/fiets1.jpg" alt="afbeelding 3" class="afbeelding">
                 </div>
             </div>
 
             <div class="info-gebied">
-                <h1 class="product-naam">Mercedes Bravia 699 Swan</h1>
-                <p class="product-prijs">€ 73.495,00</p>
-                <p><strong>Type:</strong> Automaat</p>
-                <p><strong>Bouwjaar:</strong> 2022</p>
-                <p><strong>Kilometerstand:</strong> 15.000 km</p>
+                <h1 class="product-naam">MTB 29" Canyon Spectral AL 7.9</h1>
+                <p class="product-prijs">€ 1.600</p>
+                <p><strong>Type:</strong> fiets</p>
+                <p><strong>versnellingen:</strong> 15-20</p>
                 <p><strong>Locatie:</strong> Brussel</p>
                 <p><strong>Contact:</strong> 0488 88 88 88</p>
                 <button
@@ -45,20 +49,25 @@
                 </button>
             </div>
         </section>
+        <br>
+        <br>
 
         <section class="beschrijving">
             <h3>Beschrijving</h3>
             <p>
-                Dit is een prachtige Mercedes Bravia 699 Swan in perfecte staat. De auto is volledig onderhouden en
-                heeft slechts 15.000 km gereden.
-                Hij is voorzien van alle moderne gemakken: navigatie, lederen bekleding, achteruitrijcamera,
-                automatische klimaatregeling en nog veel meer.
-                De auto wordt verkocht met een volledige servicegeschiedenis en nieuwe APK.
+                De Canyon Spectral AL 7.9 Stealth is een full suspension 29” trail mountainbike in maat L en verkeert in
+                zeer goede staat. De fiets is uitgerust met FOX voor- en achtervering, een dropper post en een Shimano
+                XT/Deore aandrijving met Shimano SLX remmen en shifters.
             </p>
             <p>
-                Ideaal voor gezinnen of zakelijk gebruik. Wegens aankoop van een nieuwe auto moet deze beauty helaas
-                weg.
-                Voor een proefrit of meer info, neem gerust contact op.
+                Recent zijn er nieuwe Continental Trail King en Mountain King 2.4” banden gemonteerd. Daarnaast zitten
+                er Ergon GS2 handvatten, een ABUS vouwslot, afneembare spatborden, een Topeak bagagedrager met MTX
+                TrunkBag en een Topeak RideCase telefoonhouder op.
+            </p>
+            <p>
+                De originele nieuwprijs was €2650 exclusief upgrades. Ik ben 188 cm en de fiets past mij perfect. Er is
+                maximaal 1500 km mee gereden, hij is altijd binnen gestald, goed onderhouden en nooit zwaar gevallen. De
+                fiets wordt verkocht omdat ik een elektrische leasefiets heb besteld.
             </p>
         </section>
 
@@ -66,24 +75,75 @@
             <h3>Wat zeggen anderen?</h3>
             <div class="commentaar-rij">
                 <div class="commentaar-vak">
-                    <h4>Jan:</h4>
-                    <p>"Zeer nette auto, precies zoals beschreven. Snelle afhandeling!"</p>
+                    <h4>Pat:</h4>
+                    <p>"De fiets is technisch in topstaat en duidelijk goed onderhouden."</p>
                 </div>
                 <div class="commentaar-vak">
-                    <h4>Marie:</h4>
-                    <p>"Echt een aanrader. Rijdt heel comfortabel en zuinig."</p>
+                    <h4>Raoul:</h4>
+                    <p>"De combinatie van FOX-vering en Shimano-onderdelen maakt hem zeer betrouwbaar op elk terrein."
+                    </p>
                 </div>
                 <div class="commentaar-vak">
-                    <h4>Thomas:</h4>
-                    <p>"Goede communicatie met de verkoper. Alles keurig geregeld."</p>
+                    <h4>Brenda:</h4>
+                    <p>"Met de extra’s zoals nieuwe banden en bagagedrager is hij meteen volledig gebruiksklaar."</p>
                 </div>
                 <div class="commentaar-vak">
-                    <h4>Linda:</h4>
-                    <p>"Auto was nog beter dan op de foto's. Heel blij met mijn aankoop."</p>
+                    <h4>Mohamed:</h4>
+                    <p>"Ideaal voor zowel speelse trails als langere ritten dankzij het comfort en de stabiliteit."</p>
                 </div>
             </div>
         </section>
+        <section>
+            <section class="commentaar-sectie">
+                <h3>gerelateerde producten</h3>
+                <div class="commentaar-rij">
+                    <div class="commentaar-vak 2">
+                        <img src="images/fiet1.jpg" alt="afbeelding 4" class="afbeelding">
+                        <h3>MFiets 26 Wit | Premium |.</h3>
+                        <h4>€ 223,50</h4>
+                    </div>
+
+                    <div class="commentaar-vak 2">
+                        <img src="images/fiet3.jpg" alt="afbeelding 4" class="afbeelding">
+                        <h3>Driewieler Volwassenen Zwart </h3>
+                        <h4>€ 850</h4>
+                    </div>
+
+                    <div class="commentaar-vak 2">
+                        <img src="images/fiet2.jpg" alt="afbeelding 4" class="afbeelding">
+                        <h3>Fiets ACHIELLE </h3>
+                        <h4>€ 350</h4>
+                    </div>
+
+
+            </section>
     </div>
+    <footer>
+        <div class="footer-container">
+            <div class="footer-column">
+                <h3>Contact</h3>
+                <p>2dehands Winkel</p>
+                <p>Brocantstraat 123</p>
+                <p>Brussel, België</p>
+                <p>Email: info@2dehandswinkel.be</p>
+                <p>Telefoon: +32 123 456 789</p>
+            </div>
+
+            <div class="footer-column">
+                <h3>Snelle links</h3>
+                <p><a href="#">Home</a></p>
+                <p><a href="#">Producten</a></p>
+                <p><a href="#">Over ons</a></p>
+                <p><a href="#">Contact</a></p>
+                <p><a href="#">FAQ</a></p>
+            </div>
+        </div>
+
+        <div class="footer-bottom">
+            <p>&copy; 2025 Tweedehands. Alle rechten voorbehouden.</p>
+            <p><a href="#">Privacy</a> | <a href="#">Voorwaarden</a> | <a href="#">Contact</a></p>
+        </div>
+    </footer>
 </body>
 
 </html>
