--- a/product-detail3.html
+++ b/product-detail3.html
@@ -11,20 +11,25 @@
 
 
 <body>
-    <div class="top-balk">
-        <div class="woorden">
-            <a href="tweedehands.html" style="color:white; text-decoration:none;">Home</a> &nbsp; Over Ons &nbsp;
-            Diensten
-            &nbsp; Contact
-        </div>
-    </div>
+    <header>
+        <nav class="top-balk">
+            <img src="images/logo.jpg" alt="Logo" id="logo">
+            <ul class="woorden">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="index.html">Over Ons</a></li>
+                <li><a href="index.html">Diensten</a></li>
+                <li><a href="index.html">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+
 
     <div class="container">
-        <a href="tweedehands.html" class="terugknop">← Terug naar overzicht</a>
+        <a href="index.html" class="terugknop">← Terug naar overzicht</a>
 
         <section class="product-kop">
             <div class="foto-gebied">
-                <img src="Design sans titre (8).jpg" alt="MTB 29 Canyon Spectral AL 7.9" class="hoofd-foto">
+                <img src="images/tafelHout.jpg" alt="MTB 29 Canyon Spectral AL 7.9" class="hoofd-foto">
 
             </div>
 
@@ -69,6 +74,57 @@
 
                 </div>
         </section>
+        <section>
+            <section class="commentaar-sectie">
+                <h3>gerelateerde producten</h3>
+                <div class="commentaar-rij">
+                    <div class="commentaar-vak 2">
+                        <img src="images/tafel5.jpg" alt="afbeelding 4" class="afbeelding">
+                        <h3>Eiken tafel | Tafelblad |.</h3>
+                        <h4>€ 95</h4>
+                    </div>
+
+                    <div class="commentaar-vak 2">
+                        <img src="images/tafel6.jpg" alt="afbeelding 4" class="afbeelding">
+                        <h3>Eiken eettafel/tafel</h3>
+                        <h4>€ 50</h4>
+                    </div>
+
+                    <div class="commentaar-vak 2">
+                        <img src="images/tafel7.jpg" alt="afbeelding 4" class="afbeelding">
+                        <h3>Livingtafel </h3>
+                        <h4>€ 20</h4>
+                    </div>
+
+
+            </section>
+            <br>
+            <footer>
+                <div class="footer-container">
+                    <div class="footer-column">
+                        <h3>Contact</h3>
+                        <p>2dehands Winkel</p>
+                        <p>Brocantstraat 123</p>
+                        <p>Brussel, België</p>
+                        <p>Email: info@2dehandswinkel.be</p>
+                        <p>Telefoon: +32 123 456 789</p>
+                    </div>
+
+                    <div class="footer-column">
+                        <h3>Snelle links</h3>
+                        <p><a href="#">Home</a></p>
+                        <p><a href="#">Producten</a></p>
+                        <p><a href="#">Over ons</a></p>
+                        <p><a href="#">Contact</a></p>
+                        <p><a href="#">FAQ</a></p>
+                    </div>
+                </div>
+
+                <div class="footer-bottom">
+                    <p>&copy; 2025 Tweedehands. Alle rechten voorbehouden.</p>
+                    <p><a href="#">Privacy</a> | <a href="#">Voorwaarden</a> | <a href="#">Contact</a></p>
+                </div>
+            </footer>
 </body>
 
 </html>
