--- a/product-detail4.html
+++ b/product-detail4.html
@@ -11,24 +11,29 @@
 
 
 <body>
-    <div class="top-balk">
-        <div class="woorden">
-            <a href="tweedehands.html" style="color:white; text-decoration:none;">Home</a> &nbsp; Over Ons &nbsp;
-            Diensten
-            &nbsp; Contact
-        </div>
-    </div>
+    <header>
+        <nav class="top-balk">
+            <img src="images/logo.jpg" alt="Logo" id="logo">
+            <ul class="woorden">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="index.html">Over Ons</a></li>
+                <li><a href="index.html">Diensten</a></li>
+                <li><a href="index.html">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+
 
     <div class="container">
-        <a href="tweedehands.html" class="terugknop">← Terug naar overzicht</a>
+        <a href="index.html" class="terugknop">← Terug naar overzicht</a>
 
         <section class="product-kop">
             <div class="foto-gebied">
-                <img src="4.1µ.png" alt="MTB 29 Canyon Spectral AL 7.9" class="hoofd-foto">
+                <img src="images/4.1µ.png" alt="MTB 29 Canyon Spectral AL 7.9" class="hoofd-foto">
                 <div class="thumbnail-rij">
-                    <img src="Design sans titre (19).jpg" alt="afbeelding 2" class="afbeelding">
-                    <img src="Design sans titre (20).jpg" alt="afbeelding 2" class="afbeelding">
-                    
+                    <img src="images/sauna4.jpg" alt="afbeelding 2" class="afbeelding">
+                    <img src="images/sauna5.jpg" alt="afbeelding 2" class="afbeelding">
+
                 </div>
             </div>
 
@@ -44,8 +49,8 @@
                 </button>
             </div>
         </section>
-<br>
-<br>
+        <br>
+        <br>
         <section class="beschrijving">
             <h3>Beschrijving</h3>
             <p>
@@ -86,6 +91,56 @@
 
     </div>
     </section>
+    <section>
+        <section class="commentaar-sectie">
+            <h3>gerelateerde producten</h3>
+            <div class="commentaar-rij">
+                <div class="commentaar-vak 2">
+                    <img src="images/sauna2.jpg" alt="afbeelding 4" class="afbeelding">
+                    <h3>Traditionele sauna voor 2-4 pers.</h3>
+                    <h4>€ 2.679,00</h4>
+                </div>
+
+                <div class="commentaar-vak 2">
+                    <img src="images/sauna1.jpg" alt="afbeelding 4" class="afbeelding">
+                    <h3>Infrarood Sauna</h3>
+                    <h4>€ 1.499,00</h4>
+                </div>
+
+                <div class="commentaar-vak 2">
+                    <img src="images/sauna3.jpg" alt="afbeelding 4" class="afbeelding">
+                    <h3>Barrel Sauna</h3>
+                    <h4>€ 2.200,00</h4>
+                </div>
+
+
+        </section>
+        <footer>
+            <div class="footer-container">
+                <div class="footer-column">
+                    <h3>Contact</h3>
+                    <p>2dehands Winkel</p>
+                    <p>Brocantstraat 123</p>
+                    <p>Brussel, België</p>
+                    <p>Email: info@2dehandswinkel.be</p>
+                    <p>Telefoon: +32 123 456 789</p>
+                </div>
+
+                <div class="footer-column">
+                    <h3>Snelle links</h3>
+                    <p><a href="#">Home</a></p>
+                    <p><a href="#">Producten</a></p>
+                    <p><a href="#">Over ons</a></p>
+                    <p><a href="#">Contact</a></p>
+                    <p><a href="#">FAQ</a></p>
+                </div>
+            </div>
+
+            <div class="footer-bottom">
+                <p>&copy; 2025 Tweedehands. Alle rechten voorbehouden.</p>
+                <p><a href="#">Privacy</a> | <a href="#">Voorwaarden</a> | <a href="#">Contact</a></p>
+            </div>
+        </footer>
 </body>
 
 </html>
