--- a/product-detail5.html
+++ b/product-detail5.html
@@ -11,24 +11,28 @@
 
 
 <body>
-    <div class="top-balk">
-        <div class="woorden">
-            <a href="tweedehands.html" style="color:white; text-decoration:none;">Home</a> &nbsp; Over Ons &nbsp;
-            Diensten
-            &nbsp; Contact
-        </div>
-    </div>
+    <header>
+        <nav class="top-balk">
+            <img src="images/logo.jpg" alt="Logo" id="logo">
+            <ul class="woorden">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="index.html">Over Ons</a></li>
+                <li><a href="index.html">Diensten</a></li>
+                <li><a href="index.html">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
 
     <div class="container">
-        <a href="tweedehands.html" class="terugknop">← Terug naar overzicht</a>
+        <a href="index.html" class="terugknop">← Terug naar overzicht</a>
 
         <section class="product-kop">
             <div class="foto-gebied">
-                <img src="Design sans titre (16).jpg" alt="MTB 29 Canyon Spectral AL 7.9" class="hoofd-foto">
+                <img src="images/bed9.jpg" alt="MTB 29 Canyon Spectral AL 7.9" class="hoofd-foto">
                 <div class="thumbnail-rij">
-                    <img src="5.2.jpg" alt="afbeelding 2" class="afbeelding">
-                    <img src="5.3.jpg" alt="afbeelding 2" class="afbeelding">
-                    <img src="Design sans titre (18).jpg" alt="afbeelding 3" class="afbeelding">
+                    <img src="images/4.jpg" alt="afbeelding 2" class="afbeelding">
+                    <img src="images/bed.jpg" alt="afbeelding 2" class="afbeelding">
+                    <img src="images/bed8.jpg" alt="afbeelding 3" class="afbeelding">
                 </div>
             </div>
 
@@ -91,6 +95,56 @@
 
     </div>
     </section>
+    <section>
+        <section class="commentaar-sectie">
+            <h3>gerelateerde producten</h3>
+            <div class="commentaar-rij">
+                <div class="commentaar-vak 2">
+                    <img src="images/bed5.jpg" alt="afbeelding 4" class="afbeelding">
+                    <h3>éénpersoons bed.</h3>
+                    <h4>€ 95</h4>
+                </div>
+
+                <div class="commentaar-vak 2">
+                    <img src="images/bed6.jpg" alt="afbeelding 4" class="afbeelding">
+                    <h3>Boxspring Napoli Deluxe</h3>
+                    <h4>€ 260</h4>
+                </div>
+
+                <div class="commentaar-vak 2">
+                    <img src="images/bed7.jpg" alt="afbeelding 4" class="afbeelding">
+                    <h3>Barrel Sauna</h3>
+                    <h4>€ 2.200,00</h4>
+                </div>
+
+
+        </section>
+        <footer>
+            <div class="footer-container">
+                <div class="footer-column">
+                    <h3>Contact</h3>
+                    <p>2dehands Winkel</p>
+                    <p>Brocantstraat 123</p>
+                    <p>Brussel, België</p>
+                    <p>Email: info@2dehandswinkel.be</p>
+                    <p>Telefoon: +32 123 456 789</p>
+                </div>
+
+                <div class="footer-column">
+                    <h3>Snelle links</h3>
+                    <p><a href="#">Home</a></p>
+                    <p><a href="#">Producten</a></p>
+                    <p><a href="#">Over ons</a></p>
+                    <p><a href="#">Contact</a></p>
+                    <p><a href="#">FAQ</a></p>
+                </div>
+            </div>
+
+            <div class="footer-bottom">
+                <p>&copy; 2025 Tweedehands. Alle rechten voorbehouden.</p>
+                <p><a href="#">Privacy</a> | <a href="#">Voorwaarden</a> | <a href="#">Contact</a></p>
+            </div>
+        </footer>
 </body>
 
 </html>
