--- a/product-detail6.html
+++ b/product-detail6.html
@@ -11,26 +11,31 @@
 
 
 <body>
-    <div class="top-balk">
-        <div class="woorden">
-            <a href="tweedehands.html" style="color:white; text-decoration:none;">Home</a> &nbsp; Over Ons &nbsp;
-            Diensten
-            &nbsp; Contact
-        </div>
-    </div>
+    <header>
+        <nav class="top-balk">
+            <img src="images/logo.jpg" alt="Logo" id="logo">
+            <ul class="woorden">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="index.html">Over Ons</a></li>
+                <li><a href="index.html">Diensten</a></li>
+                <li><a href="index.html">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+
+
 
     <div class="container">
-        <a href="tweedehands.html" class="terugknop">← Terug naar overzicht</a>
+        <a href="index.html" class="terugknop">← Terug naar overzicht</a>
 
         <section class="product-kop">
             <div class="foto-gebied">
-                <img src="kat.jpg" alt="Kattenpaal " class="hoofd-foto">
+                <img src="images/kat.jpg" alt="Kattenpaal " class="hoofd-foto">
                 <div class="thumbnail-rij">
-                    <img src="kat2.jpg" alt="afbeelding 2" class="afbeelding">
-                    <img src="kat5 (1).jpg" alt="afbeelding 2" class="afbeelding">
-                    <img src="kat5 (2).jpg" alt="afbeelding 2" class="afbeelding">
-                    <img src="kat5 (3).jpg" alt="afbeelding 2" class="afbeelding">
-
+                    <img src="images/kat2.jpg" alt="afbeelding 2" class="afbeelding">
+                    <img src="images/kat5 (1).jpg" alt="afbeelding 2" class="afbeelding">
+                    <img src="images/kat5 (2).jpg" alt="afbeelding 2" class="afbeelding">
+                    <img src="images/kat5 (3).jpg" alt="afbeelding 2" class="afbeelding">
                 </div>
             </div>
 
@@ -53,7 +58,12 @@
         <section class="beschrijving">
             <h3>Beschrijving</h3>
             <p>
-                Deze design kattenpaal met sisal is ideaal voor katten die graag spelen, krabben en rusten. De kattenpaal beschikt over een comfortabel kattenhuisje waar je kat zich kan terugtrekken, evenals meerdere platforms om op te liggen of te klimmen. De sisal krabpalen helpen bij het onderhouden van de nagels en beschermen je meubels. Dankzij de stevige basis staat de kattenpaal stabiel en veilig. Het zachte pluche materiaal zorgt voor extra comfort. Perfect voor zowel spelen als ontspannen en geschikt voor dagelijks gebruik.
+                Deze design kattenpaal met sisal is ideaal voor katten die graag spelen, krabben en rusten. De
+                kattenpaal beschikt over een comfortabel kattenhuisje waar je kat zich kan terugtrekken, evenals
+                meerdere platforms om op te liggen of te klimmen. De sisal krabpalen helpen bij het onderhouden van de
+                nagels en beschermen je meubels. Dankzij de stevige basis staat de kattenpaal stabiel en veilig. Het
+                zachte pluche materiaal zorgt voor extra comfort. Perfect voor zowel spelen als ontspannen en geschikt
+                voor dagelijks gebruik.
             </p>
 
         </section>
@@ -85,6 +95,58 @@
 
     </div>
     </section>
+
+
+    <section>
+        <section class="commentaar-sectie">
+            <h3>gerelateerde producten</h3>
+            <div class="commentaar-rij">
+                <div class="commentaar-vak 2">
+                    <img src="images/miauw.jpg" alt="afbeelding 4" class="afbeelding">
+                    <h3>tectake Krabpaal Mogli</h3>
+                    <h4>€ 74,90</h4>
+                </div>
+
+                <div class="commentaar-vak 2">
+                    <img src="images/miauw2.jpg" alt="afbeelding 4" class="afbeelding">
+                    <h3>tectake Krabpaal Marcel</h3>
+                    <h4>€ 75</h4>
+                </div>
+
+                <div class="commentaar-vak 2">
+                    <img src="images/miauw3.jpg" alt="afbeelding 4" class="afbeelding">
+                    <h3>tectake Krabpaal Nelly</h3>
+                    <h4>€ 50</h4>
+                </div>
+
+
+        </section>
+        <footer>
+            <div class="footer-container">
+                <div class="footer-column">
+                    <h3>Contact</h3>
+                    <p>2dehands Winkel</p>
+                    <p>Brocantstraat 123</p>
+                    <p>Brussel, België</p>
+                    <p>Email: info@2dehandswinkel.be</p>
+                    <p>Telefoon: +32 123 456 789</p>
+                </div>
+
+                <div class="footer-column">
+                    <h3>Snelle links</h3>
+                    <p><a href="#">Home</a></p>
+                    <p><a href="#">Producten</a></p>
+                    <p><a href="#">Over ons</a></p>
+                    <p><a href="#">Contact</a></p>
+                    <p><a href="#">FAQ</a></p>
+                </div>
+            </div>
+
+            <div class="footer-bottom">
+                <p>&copy; 2025 Tweedehands. Alle rechten voorbehouden.</p>
+                <p><a href="#">Privacy</a> | <a href="#">Voorwaarden</a> | <a href="#">Contact</a></p>
+            </div>
+        </footer>
 </body>
 
 </html>
