--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
             <a href="product-detail.html" class="product-link">
                 <div class="product-card">
-                    <img src="images/autoMerco.jpg" alt="Product auto">
+                    <img src="images/1.15.jpg" alt="Product auto">
                     <div class="product-info">
                         <h3>Mercedes Bravia 699 Swan</h3>
                         <p>Automaat</p>
@@ -65,7 +65,7 @@
 
             <a href="product-detail2.html" class="product-link">
                 <div class="product-card">
-                    <img src="images/fiets0.jpg" alt="Product 1">
+                    <img src="images/fiet10.jpg" alt="Product 1">
                     <div class="product-info">
                         <h3>MTB 29" Canyon Spectral AL 7.9</h3>
                         <p>Fiets</p>
@@ -87,7 +87,7 @@
 
             <a href="product-detail4.html" class="product-link">
                 <div class="product-card">
-                    <img src="images/4.1µ.png" alt="Product 2">
+                    <img src="images/sauna20.jpg" alt="Product 2">
                     <div class="product-info">
                         <h3>Canadese Red Cedar Buitensauna </h3>
                         <p>Sauna</p>
@@ -98,7 +98,7 @@
 
             <a href="product-detail5.html" class="product-link">
                 <div class="product-card">
-                    <img src="images/bed9.jpg" alt="Product 2">
+                    <img src="images/bed2.jpg" alt="Product 2">
                     <div class="product-info">
                         <h3>Elektrisch Hoog LAAG LAAG Bed</h3>
                         <p>bed</p>
