--- a/product-detail2.html
+++ b/product-detail2.html
@@ -28,7 +28,7 @@
 
         <section class="product-kop">
             <div class="foto-gebied">
-                <img src="images/fiets0.jpg" alt="MTB 29 Canyon Spectral AL 7.9" class="hoofd-foto">
+                <img src="images/fiet10.jpg" alt="MTB 29 Canyon Spectral AL 7.9" class="hoofd-foto">
                 <div class="thumbnail-rij">
                     <img src="images/fiets3.jpg" alt="afbeelding 3" class="afbeelding">
                     <img src="images/fiets2.jpg" alt="afbeelding 3" class="afbeelding">
