--- a/product-detail4.html
+++ b/product-detail4.html
@@ -29,7 +29,7 @@
 
         <section class="product-kop">
             <div class="foto-gebied">
-                <img src="images/4.1µ.png" alt="MTB 29 Canyon Spectral AL 7.9" class="hoofd-foto">
+                <img src="images/sauna20.jpg" alt="MTB 29 Canyon Spectral AL 7.9" class="hoofd-foto">
                 <div class="thumbnail-rij">
                     <img src="images/sauna4.jpg" alt="afbeelding 2" class="afbeelding">
                     <img src="images/sauna5.jpg" alt="afbeelding 2" class="afbeelding">
