--- a/product-detail.html
+++ b/product-detail.html
@@ -28,11 +28,10 @@
         <a href="index.html" class="terugknop">← Terug naar overzicht</a>
         <section class="product-kop">
             <div class="foto-gebied">
-                <img src="images/autoMerco.jpg" alt="Mercedes Bravia 699 Swan" class="hoofd-foto">
+                <img src="images/1.15.jpg" alt="Mercedes Bravia 699 Swan" class="hoofd-foto">
                 <div class="thumbnail-rij">
                     <img src="images/1.3.jpg" alt="afbeelding 1" class="afbeelding">
-                    <img src="images/1.2.jpg" alt="afbeelding 2" class="afbeelding">
-                    <img src="images/1.4.jpg" alt="afbeelding 3" class="afbeelding">
+                   <img src="images/1.4.jpg" alt="afbeelding 3" class="afbeelding">
                     <img src="images/1.5.jpg" alt="afbeelding 4" class="afbeelding">
                 </div>
             </div>
@@ -96,7 +95,7 @@
                 <h3>gerelateerde producten</h3>
                 <div class="commentaar-rij">
                     <div class="commentaar-vak 2">
-                        <img src="images/camion1.jpg" alt="afbeelding 4" class="afbeelding">
+                        <img src="images/camion5.jpg" alt="afbeelding 4" class="afbeelding">
                         <h3>Mercedes Citan diesel bj.</h3>
                         <h4>€ 24.500</h4>
                     </div>
