index van de admin

--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@
                 </div>
             </div>
         </div>
+                    <div class="categorieen">
+
         <h1>2de handsdienst</h1>
         <div class="producten-container">
 
