--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 
     <main>
-
+        <!-- Zoekbalken -->
         <div class="zoek-container">
             <div class="zoek-form">
                 <input type="text" class="grote-zoekbalk" placeholder="Waar ben je naar op zoek?">
@@ -33,7 +33,7 @@
                 <button class="zoek-button">Zoek</button>
             </div>
         </div>
-
+        <!-- Categorieën -->
         <div class="categorieen-container">
             <div class="categorieen">
                 <h2>Populaire Categorieën</h2>
@@ -49,91 +49,92 @@
                 </div>
             </div>
         </div>
-                    <div class="categorieen">
+        <!-- product grid -->
+        <div class="categorieen">
+            <h1>2<sup>de</sup> handsdienst</h1>
+            <div class="producten-container">
 
-        <h1>2de handsdienst</h1>
-        <div class="producten-container">
-
-            <a href="product-detail.html" class="product-link">
-                <div class="product-card">
-                    <img src="images/1.15.jpg" alt="Product auto">
-                    <div class="product-info">
-                        <h3>Mercedes Bravia 699 Swan</h3>
-                        <p>Automaat</p>
-                        <p class="prijs">€ 73.495,00</p>
+                <a href="product-detail.html" class="product-link">
+                    <div class="product-card">
+                        <img src="images/1.15.jpg" alt="Product auto">
+                        <div class="product-info">
+                            <h3>Mercedes Bravia 699 Swan</h3>
+                            <p>Automaat</p>
+                            <p class="prijs">€ 73.495,00</p>
+                        </div>
                     </div>
-                </div>
-            </a>
+                </a>
 
-            <a href="product-detail2.html" class="product-link">
-                <div class="product-card">
-                    <img src="images/fiet10.jpg" alt="Product 1">
-                    <div class="product-info">
-                        <h3>MTB 29" Canyon Spectral AL 7.9</h3>
-                        <p>Fiets</p>
-                        <p class="prijs">€ 1.600</p>
+                <a href="product-detail2.html" class="product-link">
+                    <div class="product-card">
+                        <img src="images/fiet10.jpg" alt="Product 1">
+                        <div class="product-info">
+                            <h3>MTB 29" Canyon Spectral AL 7.9</h3>
+                            <p>Fiets</p>
+                            <p class="prijs">€ 1.600</p>
+                        </div>
                     </div>
-                </div>
-            </a>
+                </a>
 
-            <a href="product-detail3.html" class="product-link">
-                <div class="product-card">
-                    <img src="images/tafelHout.jpg" alt="Product 2">
-                    <div class="product-info">
-                        <h3>Gratis salontafel</h3>
-                        <p>Tafel</p>
-                        <p class="prijs">€ 0</p>
+                <a href="product-detail3.html" class="product-link">
+                    <div class="product-card">
+                        <img src="images/tafelHout.jpg" alt="Product 2">
+                        <div class="product-info">
+                            <h3>Gratis salontafel</h3>
+                            <p>Tafel</p>
+                            <p class="prijs">€ 0</p>
+                        </div>
                     </div>
-                </div>
-            </a>
+                </a>
 
-            <a href="product-detail4.html" class="product-link">
-                <div class="product-card">
-                    <img src="images/sauna20.jpg" alt="Product 2">
-                    <div class="product-info">
-                        <h3>Canadese Red Cedar Buitensauna </h3>
-                        <p>Sauna</p>
-                        <p class="prijs">€ 5.795,00</p>
+                <a href="product-detail4.html" class="product-link">
+                    <div class="product-card">
+                        <img src="images/sauna20.jpg" alt="Product 2">
+                        <div class="product-info">
+                            <h3>Canadese Red Cedar Buitensauna </h3>
+                            <p>Sauna</p>
+                            <p class="prijs">€ 5.795,00</p>
+                        </div>
                     </div>
-                </div>
-            </a>
+                </a>
 
-            <a href="product-detail5.html" class="product-link">
-                <div class="product-card">
-                    <img src="images/bed2.jpg" alt="Product 2">
-                    <div class="product-info">
-                        <h3>Elektrisch Hoog LAAG LAAG Bed</h3>
-                        <p>bed</p>
-                        <p class="prijs">€ 500</p>
+                <a href="product-detail5.html" class="product-link">
+                    <div class="product-card">
+                        <img src="images/bed2.jpg" alt="Product 2">
+                        <div class="product-info">
+                            <h3>Elektrisch Hoog LAAG LAAG Bed</h3>
+                            <p>bed</p>
+                            <p class="prijs">€ 500</p>
+                        </div>
                     </div>
-                </div>
-            </a>
+                </a>
 
-            <a href="product-detail6.html" class="product-link">
-                <div class="product-card">
-                    <img src="images/kat.jpg" alt="Product 2">
-                    <div class="product-info">
-                        <h3></h3>
-                        <p>Kattenpaal </p>
-                        <p>kat</p>
-                        <p class="prijs">€ 150</p>
+                <a href="product-detail6.html" class="product-link">
+                    <div class="product-card">
+                        <img src="images/kat.jpg" alt="Product 2">
+                        <div class="product-info">
+                            <h3></h3>
+                            <p>Kattenpaal </p>
+                            <p>kat</p>
+                            <p class="prijs">€ 150</p>
+                        </div>
                     </div>
-                </div>
-            </a>
-        </div>
+                </a>
+            </div>
 
-        <!--apps -->
-        <div class="app-downloads">
-            <a href="" class="app-button">
-                <img src="images/playStor.jpg" alt="Download in de App Store">
-            </a>
+            <!--apps downloaden-->
+            <div class="app-downloads">
+                <a href="" class="app-button">
+                    <img src="images/playStor.jpg" alt="Download in de App Store">
+                </a>
 
-            <a href="" class="app-button">
-                <img src="images/apple.jpg" alt="Download in de App Store">
-            </a>
-        </div>
+                <a href="" class="app-button">
+                    <img src="images/apple.jpg" alt="Download in de App Store">
+                </a>
+            </div>
 
     </main>
+    <!-- footer -->
     <footer>
         <div class="footer-container">
             <div class="footer-column">
