--- a/product-detail.html
+++ b/product-detail.html
@@ -31,11 +31,11 @@
                 <img src="images/1.15.jpg" alt="Mercedes Bravia 699 Swan" class="hoofd-foto">
                 <div class="thumbnail-rij">
                     <img src="images/1.3.jpg" alt="afbeelding 1" class="afbeelding">
-                   <img src="images/1.4.jpg" alt="afbeelding 3" class="afbeelding">
+                    <img src="images/1.4.jpg" alt="afbeelding 3" class="afbeelding">
                     <img src="images/1.5.jpg" alt="afbeelding 4" class="afbeelding">
                 </div>
             </div>
-
+            <!-- info's over producten -->
             <div class="info-gebied">
                 <h1 class="product-naam">Mercedes Bravia 699 Swan</h1>
                 <p class="product-prijs">€ 73.495,00</p>
@@ -52,6 +52,8 @@
         </section>
         <br>
         <br>
+        <!-- Beschrijving van het product -->
+
 
         <section class="beschrijving">
             <h3>Beschrijving</h3>
@@ -68,7 +70,7 @@
                 Voor een proefrit of meer info, neem gerust contact op.
             </p>
         </section>
-
+        <!-- Commentaar reviews van andere gebruikers -->
         <section class="commentaar-sectie">
             <h3>Wat zeggen anderen?</h3>
             <div class="commentaar-rij">
@@ -90,31 +92,45 @@
                 </div>
             </div>
         </section>
-        <section>
-            <section class="commentaar-sectie">
-                <h3>gerelateerde producten</h3>
-                <div class="commentaar-rij">
-                    <div class="commentaar-vak 2">
-                        <img src="images/camion5.jpg" alt="afbeelding 4" class="afbeelding">
-                        <h3>Mercedes Citan diesel bj.</h3>
-                        <h4>€ 24.500</h4>
-                    </div>
-
-                    <div class="commentaar-vak 2">
-                        <img src="images/camion6.jpg" alt="afbeelding 4" class="afbeelding">
-                        <h3>Chausson V690 Sport Line Automaat </h3>
-                        <h4>€ 63.995,00</h4>
-                    </div>
-
-                    <div class="commentaar-vak 2">
-                        <img src="images/camion7.jpg" alt="afbeelding 4" class="afbeelding">
-                        <h3>Burstner I700 Viseo</h3>
-                        <h4>€ 49.995,00</h4>
-                    </div>
+        <section class="commentaar-sectie">
 
 
-            </section>
+            <!-- Gerelateerde producten -->
+
+
+            <h3>gerelateerde producten</h3>
+            <div class="commentaar-rij">
+                <div class="commentaar-vak 2">
+                    <a href="product-detail.html" class="product-link">
+                        <div class="product-card">
+                            <img src="images/camion5.jpg" alt="afbeelding van een camionet" class="afbeelding">
+                            <h3>Mercedes Citan diesel bj.</h3>
+                            <h4>€ 24.500</h4>
+                        </div>
+                    </a>
+                </div>
+                <div class="commentaar-vak 2">
+                    <a href="product-detail.html" class="product-link">
+                        <div class="product-card">
+                            <img src="images/camion6.jpg" alt="afbeelding van een camionet 2" class="afbeelding">
+                            <h3>Chausson V690 Sport Line Automaat </h3>
+                            <h4>€ 63.995,00</h4>
+                        </div>
+                    </a>
+                </div>
+                <div class="commentaar-vak 2">
+                    <a href="product-detail.html" class="product-link">
+                        <div class="product-card">
+                            <img src="images/camion7.jpg" alt="afbeelding van een camionet 3" class="afbeelding">
+                            <h3>Burstner I700 Viseo</h3>
+                            <h4>€ 49.995,00</h4>
+                        </div>
+                    </a>
+                </div>
+        </section>
     </div>
+    <!-- Footer met extra informatie -->
+
     <footer>
         <div class="footer-container">
             <div class="footer-column">
