fiets tweede hands

--- a/product-detail2.html
+++ b/product-detail2.html
@@ -35,6 +35,7 @@
                     <img src="images/fiets1.jpg" alt="afbeelding 3" class="afbeelding">
                 </div>
             </div>
+            <!-- info's over producten -->
 
             <div class="info-gebied">
                 <h1 class="product-naam">MTB 29" Canyon Spectral AL 7.9</h1>
@@ -51,6 +52,7 @@
         </section>
         <br>
         <br>
+        <!-- Beschrijving van het product -->
 
         <section class="beschrijving">
             <h3>Beschrijving</h3>
@@ -70,11 +72,13 @@
                 fiets wordt verkocht omdat ik een elektrische leasefiets heb besteld.
             </p>
         </section>
+        <!-- Commentaar reviews van andere gebruikers -->
 
         <section class="commentaar-sectie">
             <h3>Wat zeggen anderen?</h3>
             <div class="commentaar-rij">
                 <div class="commentaar-vak">
+
                     <h4>Pat:</h4>
                     <p>"De fiets is technisch in topstaat en duidelijk goed onderhouden."</p>
                 </div>
@@ -98,26 +102,40 @@
                 <h3>gerelateerde producten</h3>
                 <div class="commentaar-rij">
                     <div class="commentaar-vak 2">
-                        <img src="images/fiet1.jpg" alt="afbeelding 4" class="afbeelding">
-                        <h3>MFiets 26 Wit | Premium |.</h3>
-                        <h4>€ 223,50</h4>
+                        <a href="product-detail.html" class="product-link">
+                            <div class="product-card">
+                                <img src="images/fiet1.jpg" alt="afbeelding van een fiets 1" class="afbeelding">
+                                <h3>MFiets 26 Wit | Premium |.</h3>
+                                <h4>€ 223,50</h4>
+                            </div>
+                        </a>
                     </div>
 
                     <div class="commentaar-vak 2">
-                        <img src="images/fiet3.jpg" alt="afbeelding 4" class="afbeelding">
-                        <h3>Driewieler Volwassenen Zwart </h3>
-                        <h4>€ 850</h4>
+                        <a href="product-detail.html" class="product-link">
+                            <div class="product-card">
+                                <img src="images/fiet3.jpg" alt="afbeelding van een fiets 2" class="afbeelding">
+                                <h3>Driewieler Volwassenen Zwart </h3>
+                                <h4>€ 850</h4>
+                            </div>
+                        </a>
                     </div>
 
                     <div class="commentaar-vak 2">
-                        <img src="images/fiet2.jpg" alt="afbeelding 4" class="afbeelding">
-                        <h3>Fiets ACHIELLE </h3>
-                        <h4>€ 350</h4>
+                        <a href="product-detail.html" class="product-link">
+                            <div class="product-card">
+                                <img src="images/fiet2.jpg" alt="afbeelding van een fiets 3" class="afbeelding">
+                                <h3>Fiets ACHIELLE </h3>
+                                <h4>€ 350</h4>
+                            </div>
+                        </a>
                     </div>
 
 
             </section>
     </div>
+    <!-- Footer met extra informatie -->
+
     <footer>
         <div class="footer-container">
             <div class="footer-column">
