--- a/product-detail4.html
+++ b/product-detail4.html
@@ -36,6 +36,7 @@
 
                 </div>
             </div>
+            <!-- info's over producten -->
 
             <div class="info-gebied">
                 <h1 class="product-naam"> Buitnen Sauna</h1>
@@ -63,6 +64,8 @@
             </p>
 
         </section>
+        <!-- Beschrijving van het product -->
+
 
         <section class="commentaar-sectie">
             <h3>Wat zeggen anderen?</h3>
@@ -91,30 +94,46 @@
 
     </div>
     </section>
+    <!-- Commentaar reviews van andere gebruikers -->
+
     <section>
         <section class="commentaar-sectie">
             <h3>gerelateerde producten</h3>
             <div class="commentaar-rij">
                 <div class="commentaar-vak 2">
-                    <img src="images/sauna2.jpg" alt="afbeelding 4" class="afbeelding">
-                    <h3>Traditionele sauna voor 2-4 pers.</h3>
-                    <h4>€ 2.679,00</h4>
+                    <a href="product-detail.html" class="product-link">
+                        <div class="product-card">
+                            <img src="images/sauna2.jpg" alt="afbeelding van een sauna" class="afbeelding">
+                            <h3>Traditionele sauna voor 2-4 pers.</h3>
+                            <h4>€ 2.679,00</h4>
+                        </div>
+                    </a>
                 </div>
 
                 <div class="commentaar-vak 2">
-                    <img src="images/sauna1.jpg" alt="afbeelding 4" class="afbeelding">
-                    <h3>Infrarood Sauna</h3>
-                    <h4>€ 1.499,00</h4>
+                    <a href="product-detail.html" class="product-link">
+                        <div class="product-card">
+                            <img src="images/sauna1.jpg" alt="afbeelding van een sauna 2" class="afbeelding">
+                            <h3>Infrarood Sauna</h3>
+                            <h4>€ 1.499,00</h4>
+                        </div>
+                    </a>
                 </div>
 
                 <div class="commentaar-vak 2">
-                    <img src="images/sauna3.jpg" alt="afbeelding 4" class="afbeelding">
-                    <h3>Barrel Sauna</h3>
-                    <h4>€ 2.200,00</h4>
+                    <a href="product-detail.html" class="product-link">
+                        <div class="product-card">
+                            <img src="images/sauna3.jpg" alt="afbeelding van een sauna 3" class="afbeelding">
+                            <h3>Barrel Sauna</h3>
+                            <h4>€ 2.200,00</h4>
+                        </div>
+                    </a>
                 </div>
 
 
         </section>
+        <!-- Footer met extra informatie -->
+
         <footer>
             <div class="footer-container">
                 <div class="footer-column">
