index van mijn admin

--- a/admin goed/index.html
+++ b/admin goed/index.html
@@ -8,12 +8,15 @@
 
     <title>Login</title>
 </head>
+<!-- Header van de loginpagina -->
 
 <body>
     <header id="header-index">
         <h1>Admin 2de handsdienst</h1>
     </header>
     <main>
+        <!-- Container om de loginbox te centreren -->
+
         <div class="container">
             <div class="login-box">
                 <img src="images/logo.jpg" alt="logo">
@@ -26,6 +29,7 @@
             </div>
         </div>
     </main>
+    <!-- Footer -->
 
     <footer>
         <div class="footer-bottom">
