produckt bewerken van de admin

--- a/admin goed/product-bewerken.html
+++ b/admin goed/product-bewerken.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+    <!-- Header met admin navigatie -->
 
     <header>
         <nav class="top-balk">
@@ -23,6 +24,8 @@
 
     <main>
         <h1 id="h1toevoegen">Product bewerken</h1>
+        <!-- Formulier om een bestaand product aan te passen -->
+
         <form>
             <label for="productnaam">Productnaam:</label>
             <input type="text" id="productnaam" name="productnaam" placeholder="Vul de productnaam in" required>
@@ -38,6 +41,7 @@
                 <option value="speelgoed">Speelgoed</option>
                 <option value="boeken">Boeken</option>
             </select>
+            <!-- Checkbox voor voorraadstatus -->
 
             <label>
                 <input type="checkbox" name="beschikbaar"> Beschikbaar op voorraad
