--- a/admin goed/product-toevoegen.html
+++ b/admin goed/product-toevoegen.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+    <!-- Header met admin navigatie -->
 
     <header>
         <nav class="top-balk">
@@ -19,10 +20,13 @@
                 <li><a href="index.html">Logout</a></li>
             </ul>
         </nav>
+
     </header>
 
     <main>
         <h1 id="h1toevoegen">Product Toevoegen</h1>
+        <!-- Formulier om een nieuw product toe te voegen -->
+
         <form>
             <label for="productnaam">Productnaam:</label>
             <input type="text" id="productnaam" name="productnaam" placeholder="Vul de productnaam in" required>
@@ -45,6 +49,7 @@
             <label for="beschrijving">Beschrijving:</label>
             <textarea id="beschrijving" name="beschrijving"
                 placeholder="Vul een korte productbeschrijving in"></textarea>
+            <!-- Verzenden van het formulier -->
 
             <button type="submit">Opslaan</button>
         </form>
@@ -57,4 +62,5 @@
         </div>
     </footer>
 </body>
+
 </html>
