--- a/admin goed/product.html
+++ b/admin goed/product.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+    <!-- Header met admin navigatie -->
 
     <header>
         <nav class="top-balk">
@@ -27,6 +28,7 @@
         <div class="search-container">
             <input type="text" id="search" placeholder="Zoek product...">
         </div>
+        <!-- Productentabelen -->
 
         <div class="product-table">
             <div class="product-row header">
@@ -102,11 +104,12 @@
                 </div>
             </div>
         </div>
+        <!-- Knop om een nieuw product toe te voegen -->
 
         <div class="product-toevoegen-container">
             <a href="product-toevoegen.html" class="product-toevoegen-btn">Voeg product toe</a>
 
-      
+
         </div>
     </main>
 
